# figaro-contract

./: .gitignore  Cargo.toml  POC_delivery_check-up.md  README.md  rustfmt.toml
common/: setup.sh
examples/: schema.rs
src/: contract.rs  error.rs  lib.rs  methods.rs  models.rs  msg.rs  queries.rs  state.rs  utils.rs
